# Sifu

./: .cursorignore  .env  .gitignore  README.md  codebase.txt  config.json  docker-compose.yml  get_clean_message_list.py  init_neo4j.py  inspect_graph.py  kg_test.py  medical_domain_config.json  pyproject.toml  question_builder.py  requirements.txt  run_agents.py  run_tests.py  sample_domain_config.json  sample_queries.json  setup.py  test_model_behavior.py  test_visual_qa.py
agents/: __init__.py
agents/co_scientist/: __init__.py  base_agent.py  main.py
examples/: research_example.py
prompts/: __init__.py
prompts/compiler/: __init__.py  compiler_prompts.py  task_execution.py
prompts/knowledge_acquisition/: __init__.py  confidence_evaluation.py  entity_extraction.py  extraction.py  join_decision.py  metadata_generation.py  plan_generation.py  query_generation.py  relationship_extraction.py  task_execution.py
prompts/lora/: __init__.py  training_config.py
prompts/qa/: __init__.py  answer_generation.py  join_decision.py  knowledge_gap.py  qa_planning.py  qa_prompt.py  qa_prompts.py  (+2 more)
sample_data/: simple_test.txt  test.txt
scripts/: __init__.py  chat_gemini.py  chat_langchain.py  example_generator.py  gaia_scorer.py  knowledge_acquisition.py  llm_compiler.py  logging_config.py  lora_training.py  mdconvert.py  models.py  qa_system.py  reformulator.py  research_agent.py  synthetic_knowledge.py  text_inspector_tool.py  text_web_browser.py  text_web_browser_fixed.py  training.py  types.py  visual_qa.py
tests/: test_knowledge_graph_integration.py
(+34 files in other folders)
